fixed abilities spacing, removed bg color

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ main > #pokemon-card {
 }
 
 .card-wrapper {
-  background-color: rgb(230, 66, 66);
+  /* background-color: rgb(230, 66, 66); */
   border: 11px solid rgba(255, 217, 0, 0.877);
   border-radius: 5px;
   height: 90%;
@@ -32,28 +32,27 @@ main > #pokemon-card {
 
 /* Name, HP, type */
 #top-text-wrapper {
-  text-align: center;
-  padding-top: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
+  display: flex;
+
+  margin: 0;
+  padding: 10px 30px 0px 30px;
   flex-wrap: nowrap;
 }
 
-/* .top-text {
-  position: absolute;
-} */
-
 #pokemon-name {
   font-weight: 700;
+  width: 50px;
+  flex: 1 0 auto;
 }
 
 #top-text-wrapper span:not(:first-child) {
   margin: 0;
-  margin-left: 110px;
+  margin-left: 100px;
 }
 
 #top-text-wrapper span:last-child {
   margin: 0;
+  padding-left: 10px;
 }
 
 /* Image */
@@ -87,9 +86,11 @@ main > #pokemon-card {
 
 /* Abilities */
 .ability-wrapper {
+  display: flex;
   justify-content: space-between;
-  text-align: center;
-  margin-bottom: 75px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-bottom: 50px;
 }
 
 /* Actions */
